# rust-chat

./: readme.md
server/: .gitignore  Cargo.toml  db-compose.yml  db.sqlite
server/.sqlx/: query-0023f356dd913e23a799005197aa9ab4b3bea476382d00643509c79ff6128dfe.json  query-2b2da32a792a8ef97d42c68d813fb3fce95eabec3ea445446e8afc76652522ce.json  query-2dc6066f247cba6145b30117d058450b7912d29cb4e78d2fd389a1167cc585b1.json  query-391e4bec8bd21cc324af8aa0066381761d316e0859a616c4cb92a913ab581e09.json  query-4eb70dda4eb6fcba14b08c01bf9fa66d8305a0374024f9df25382df8a0ee8aed.json  query-626ae86ffe2df6e0fdb939b154737bcf186fe25cbd0ff243e513123505c2cc3d.json  query-66d39486e88cf5fa9085e61c963137b105a347345edcc3f9648d76a1b604326c.json  query-67f4f83c911039726277d8ee5bdd3e17234e642f2ced88d7410f2c39e5aafd61.json  query-6e4c419527ea61f52f2fac96bf6b0048d3f84a39610facc88e5783dc5061af7f.json  query-7bcc6620b344e24c1f958319930dddaaf5ff84eb36e0594caca392fce994bef0.json  query-7dbd66bf8dec5fd787edefb01b8c2e786a2dd644b46eb72535b4114b94f987d5.json  query-891bcdff01b90aa3ebf80e715d439825f9c0b6201a365eb3c5bc8d485a92f840.json  query-983a7f8938eb1c2fa802579a44092f07dc3bd1b69183c9983c73e512565250b0.json  query-b84fa6c965370d5004a5005ca52256c5c7d32bd27f93c4b45c3f7209403b9c65.json  query-b8bf58f0a12afbdc4caeeb26fbd211d2a752966054370bf5fa1ca33496a893c3.json  query-c3c6160f04252ff6772ed8ec8fb6fc3417a8ff1b7907621fa8dca5fd444ee97e.json
server/migrations/: 20251225083202_init.down.sql  20251225083202_init.up.sql  20260109164437_conversations.down.sql  (+3 more)
server/src/: main.rs
shared/: Cargo.toml
(+54 files in other folders)
