[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
rocket = {version = "0.5.1", features = ["json", "tls"]}
serde = {version = "1.0.228"}
serde_json = "1.0.147"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "derive", "macros", "json"] }
macros = { path = "../macros" }
shared = { path = "../shared", features=["server"] }
bcrypt = "0.17.1"
jsonwebtoken = {version  = "10.2.0", features = ["aws_lc_rs"]}
chrono = { version = "0.4.42", features = ["serde"] }
uuid = {version = "1.19.0", features = ["v4"]}
