[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
rocket = {version = "0.5.1", optional = true, features = ["json"]}
chrono = { version = "0.4.42", features = ["serde"] }

[features]
# default = ["server"]
server = ["dep:rocket"]